--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "logintest": "npx cypress run --headed --reporter mochawesome --spec ./cypress/e2e/test/loginTest.cy.js",
     "addUsertest": "npx cypress run --headed --reporter mochawesome --spec cypress/e2e/test/addAndVerifyUser.cy.js",
     "addCandidatetest": "npx cypress run --headed --reporter mochawesome --spec cypress/e2e/test/addAndVerifyCandidate.cy.js",
-    "verifyReporttest": "npx cypress run --headed --reporter mochawesome --spec cypress/e2e/test/viewAndVerifyReport.cy.js"
+    "viewAndVerifyReport": "npx cypress run --headed --reporter mochawesome --spec cypress/e2e/test/viewAndVerifyReport.cy.js"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,6 @@
   },
   "homepage": "https://github.com/Zahid-Automate/OrangeCRMLive#readme",
   "devDependencies": {
-    "@types/cypress": "^1.1.3",
     "cypress": "^13.6.3",
     "mochawesome": "^7.1.3"
   }
